crates/fig-parser/tests/snapshots/integration_tests__variables__let_no_type.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: let_vars
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: x
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "10"
                  suffix: ~
          - Let:
              annotations: []
              name: y
              ty: ~
              value:
                FloatLiteral:
                  digits: "3.14"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: flag
              ty: ~
              value:
                BooleanLiteral: true
          - Let:
              annotations: []
              name: name
              ty: ~
              value:
                StringLiteral: fig
          - Pass
