crates/fig-parser/tests/snapshots/integration_tests__variables__mut_no_type.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: mut_vars
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Mut:
              annotations: []
              name: x
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - Mut:
              annotations: []
              name: counter
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "100"
                  suffix: ~
          - Mut:
              annotations: []
              name: flag
              ty: ~
              value:
                BooleanLiteral: true
          - Mut:
              annotations: []
              name: name
              ty: ~
              value:
                StringLiteral: initial
          - Pass
